--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <img src="/build/img/menu.svg" alt="Boton Menu" id="btnMenu">
         </div>
         <nav class="header__tablet">
-            <a href="/" class="header__enlace">Inicio</a>
+            <a href="/" class="header__enlace header__enlace--actual">Inicio</a>
             <a href="/nosotros.html" class="header__enlace">Nosotros</a>
-            <a href="/galeria.html" class="header__enlace">Galeria</a>
+            <a href="/galeria.html" class="header__enlace">Galería</a>
             <a href="/blog.html" class="header__enlace">Blog</a>
-            <a href="/cursos.html" class="header__enlace">Cursos</a>
+            <a href="/suscribete.html" class="header__enlace">Suscríbete</a>
         </nav>
     </header>
 
@@ -45,11 +45,11 @@
             <img src="/build/img/cerrar.svg" alt="Boton Cerrar" id="btnCerrar">
         </div>
         <div class="offcanva__contenedor">
-            <a href="/" class="offcanva__enlace">Inicio</a>
+            <a href="/" class="offcanva__enlace offcanva__enlace--actual">Inicio</a>
             <a href="/nosotros.html" class="offcanva__enlace">Nosotros</a>
-            <a href="/galeria.html" class="offcanva__enlace">Galeria</a>
+            <a href="/galeria.html" class="offcanva__enlace">Galería</a>
             <a href="/blog.html" class="offcanva__enlace">Blog</a>
-            <a href="/cursos.html" class="offcanva__enlace">Cursos</a>
+            <a href="/suscribete.html" class="offcanva__enlace">Suscríbete</a>
         </div>
     </div>
 
@@ -75,13 +75,13 @@
         <p class="footer__mensaje">Oprime en alguno de los siguientes iconos para seguirnos en nuestras resde sociales</p>
         <div class="footer__sociales">
             <a href="#">
-                <img src="/build/img/facebook.svg" alt="Boton facebook">
+                <img src="/build/img/facebook.svg" alt="Boton facebook" title="Facebook">
             </a>
             <a href="#">
-                <img src="/build/img/youtube.svg" alt="Boton youtube">
+                <img src="/build/img/youtube.svg" alt="Boton youtube" title="Youtube">
             </a>
             <a href="#">
-                <img src="/build/img/twitter.svg" alt="Boton twitter">
+                <img src="/build/img/twitter.svg" alt="Boton twitter" title="Twitter">
             </a>
         </div>
     </footer>
