--- a/suscribete.html
+++ b/suscribete.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlogDeCafé | Cursos</title>
+    <title>BlogDeCafé | Suscríbete</title>
     <meta name="description"
         content="Nuestro objetivo es proveer a los aficionados y expertos en el café una plataforma en línea para aprender todo lo relacionado con el café">
     <link rel="icon" type="image/svg" href="/build/img/icon.svg">
@@ -34,9 +34,9 @@
         <nav class="header__tablet">
             <a href="/" class="header__enlace">Inicio</a>
             <a href="/nosotros.html" class="header__enlace">Nosotros</a>
-            <a href="/galeria.html" class="header__enlace">Galeria</a>
+            <a href="/galeria.html" class="header__enlace">Galería</a>
             <a href="/blog.html" class="header__enlace">Blog</a>
-            <a href="/cursos.html" class="header__enlace">Cursos</a>
+            <a href="/suscribete.html" class="header__enlace header__enlace--actual">Suscríbete</a>
         </nav>
     </header>
 
@@ -47,14 +47,14 @@
         <div class="offcanva__contenedor">
             <a href="/" class="offcanva__enlace">Inicio</a>
             <a href="/nosotros.html" class="offcanva__enlace">Nosotros</a>
-            <a href="/galeria.html" class="offcanva__enlace">Galeria</a>
+            <a href="/galeria.html" class="offcanva__enlace">Galería</a>
             <a href="/blog.html" class="offcanva__enlace">Blog</a>
-            <a href="/cursos.html" class="offcanva__enlace">Cursos</a>
+            <a href="/suscribete.html" class="offcanva__enlace offcanva__enlace--actual">Suscríbete</a>
         </div>
     </div>
 
     <section class="mt">
-        <h1>desde cursos</h1>
+        <h1>desde suscríbete</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti rem molestiae repellendus ipsa maiores harum sit id accusantium saepe, quam aliquid tempore a consectetur? At architecto a amet in aliquid.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti rem molestiae repellendus ipsa maiores harum sit id accusantium saepe, quam aliquid tempore a consectetur? At architecto a amet in aliquid.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti rem molestiae repellendus ipsa maiores harum sit id accusantium saepe, quam aliquid tempore a consectetur? At architecto a amet in aliquid.</p>
@@ -68,13 +68,13 @@
         <p class="footer__mensaje">Oprime en alguno de los siguientes iconos para seguirnos en nuestras resde sociales</p>
         <div class="footer__sociales">
             <a href="#">
-                <img src="/build/img/facebook.svg" alt="Boton facebook">
+                <img src="/build/img/facebook.svg" alt="Boton facebook" title="Facebook">
             </a>
             <a href="#">
-                <img src="/build/img/youtube.svg" alt="Boton youtube">
+                <img src="/build/img/youtube.svg" alt="Boton youtube" title="Youtube">
             </a>
             <a href="#">
-                <img src="/build/img/twitter.svg" alt="Boton twitter">
+                <img src="/build/img/twitter.svg" alt="Boton twitter" title="Twitter">
             </a>
         </div>
     </footer>
