--- a/nosotros.html
+++ b/nosotros.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <section class="mt nosotros">
+    <main class="mt nosotros">
         <h1 class="nosotros__heading">Sobre Nosotros</h1>
         <div class="nosotros__grid">
             <div class="nosotros__imagen">
@@ -82,11 +82,10 @@
                 </p>
             </div>
         </div>
-    </section>
+    </main>
 
     <footer class="footer">
         <a href="/" class="footer__logo">
-            <!-- <img src="/build/img/icon.svg" alt="Icono Blog Café" class="footer__imagen"> -->
             <h1 class="footer__heading">Blog<span class="footer__span">DeCafé</span></h1>
         </a>
         <p class="footer__mensaje">Oprime en alguno de los siguientes iconos para seguirnos en nuestras resde sociales
