--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="hero">
         <div class="hero__contenido">
             <h1 class="hero__heading">Blog de café con consejos y cursos</h1>
-            <p class="hero__descripcion">Aprende de los expertos con las mejores recetas y consejos</p>
+            <p class="hero__descripcion">Sumérgete en el sabor del café</p>
         </div>
     </div>
 
